Build fixes, README notes
More fixes and updates to the README